# api/docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  controllers.UserData.Request:
+    properties:
+      token:
+        type: string
+    type: object
   models.ErrorResponse:
     properties:
       error:
@@ -31,21 +36,6 @@ definitions:
     - password
     - role
     - username
-    type: object
-  models.User:
-    properties:
-      created_at:
-        type: string
-      id:
-        type: string
-      password:
-        type: string
-      role:
-        type: string
-      updated_at:
-        type: string
-      username:
-        type: string
     type: object
 info:
   contact: {}
@@ -96,7 +86,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.OkResponse'
         "400":
           description: ' '
           schema:
@@ -132,6 +122,34 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponse'
       summary: Logout current session
+      tags:
+      - Users
+  /users/user-data:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UserData.Request'
+      - description: ApiKey header
+        in: header
+        name: x-api-key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "500":
+          description: ' '
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Gets data of current user
       tags:
       - Users
 swagger: "2.0"
